// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pie-chart Renders \`pie-chart\` widget settings with custom props and permissions 1`] = `
<widget-settings-stub
  divider="true"
>
  <pie-chart-widget-form-stub
    form="[object Object]"
    withperiodicrefresh="true"
    withpreset="true"
  />
</widget-settings-stub>
`;

exports[`pie-chart Renders \`pie-chart\` widget settings with default props 1`] = `
<widget-settings-stub
  divider="true"
>
  <pie-chart-widget-form-stub
    form="[object Object]"
    withperiodicrefresh="true"
    withpreset="true"
  />
</widget-settings-stub>
`;

exports[`pie-chart Renders \`pie-chart\` widget settings with default props with changed title 1`] = `
<widget-settings-stub
  dirty="true"
  divider="true"
>
  <pie-chart-widget-form-stub
    form="[object Object]"
    withperiodicrefresh="true"
    withpreset="true"
  />
</widget-settings-stub>
`;
